...
                            .resizable()
                            .frame(width: 20,height: 20)
                        
                        Text("Add New Task")
                    }
                }
                .accessibility(identifier: "addTaskButton")
                .padding()
            }
            .navigationBarTitle("Tasks")
        }
    }
    struct ContentView_Previews: PreviewProvider {
...
                    }.accessibility(identifier: "checkMarkTask")
                TextField("Enter the task title", text: $taskCellVM.task.title, onCommit: {
                    
                    self.onCommit(self.taskCellVM.task)
//                    print("nu skapades den")
                })
                .accessibility(identifier: "taskNameTextField")
            }
        }
    }
}

